--- a/templates/towers.html
+++ b/templates/towers.html
@@ -512,7 +512,7 @@ button:hover {
         
                 if (!response.ok) throw new Error('Request failed');
         
-                console.log('Request successful:', await response.json());
+                console.log('Request successful:');
         
             } catch (err) {
                 console.error('Error sending:', err);
@@ -532,6 +532,7 @@ button:hover {
     </script>
 </body>
 </html>
+
 
 
 
