--- a/templates/towers.html
+++ b/templates/towers.html
@@ -512,13 +512,13 @@ button:hover {
                 return;
             }
 
-
-            window.location.href = `/withdraw?amount=${encodeURIComponent(amount)}`;
+            window.location.href = `/withdraw?amount=${encodeURIComponent(amount)}&page=${encodeURIComponent("towers")}`;
         };
 
     </script>
 </body>
 </html>
+
 
 
 
