--- a/templates/towers.html
+++ b/templates/towers.html
@@ -519,13 +519,14 @@ button:hover {
             const errorMessage = document.querySelector('.error-message');
     
             if (errorMessage) {
-                switchTab('withdraw');
+                openWallet('withdraw');
             }
         };
 
     </script>
 </body>
 </html>
+
 
 
 
