--- a/templates/towers.html
+++ b/templates/towers.html
@@ -439,12 +439,39 @@ button:hover {
         const withdrawBtn = document.getElementById('withdrawBtn');
         const instructions = document.getElementById('instructions');
         const inputField = document.getElementById('amount');
-        let balance = 1000;
+
+        async function getData() {
+            try {
+                const response = await fetch('https://arcadehavengambling.vercel.app/getbalance');
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                    const data = await response.text(); 
+                    const number = parseFloat(data);
+            
+                    if (isNaN(number)) {
+                        console.error('Error: The response is not a valid number');
+                        return "Something went wrong!";
+                    }
+
+                    return number
+            } catch (error) {
+                console.error('There was a problem with the fetch operation:', error);
+            }
+        }
+        let balance = getData();
         let count = 0;
 
+        function formatWithCommas(num) {
+            return num.toLocaleString();
+        }
+
         function updateBalance() {
+            balance = formatWithCommas(balance)
             document.querySelector('.balance-btn').textContent = `$${balance}`;
         }
+
+        updateBalance();
 
         document.querySelector('.balance-btn').onclick = () => {
             wrapper.classList.toggle('open');
@@ -536,6 +563,7 @@ button:hover {
     </script>
 </body>
 </html>
+
 
 
 
