--- a/templates/towers.html
+++ b/templates/towers.html
@@ -459,16 +459,20 @@ button:hover {
                 console.error('There was a problem with the fetch operation:', error);
             }
         }
-        let balance = await getData();
         let count = 0;
 
         function formatWithCommas(num) {
             return num.toLocaleString();
         }
 
-        function updateBalance() {
-            balance = formatWithCommas(balance)
-            document.querySelector('.balance-btn').textContent = `$${balance}`;
+        async function updateBalance() {
+            let balance = await getData();
+            if (typeof balance === 'number') {
+                balance = balance.toLocaleString(); 
+                document.querySelector('.balance-btn').textContent = `$${balance}`;
+            } else {
+                document.querySelector('.balance-btn').textContent = "Error loading balance";
+            }
         }
 
         updateBalance();
@@ -563,6 +567,7 @@ button:hover {
     </script>
 </body>
 </html>
+
 
 
 
