--- a/templates/mines.html
+++ b/templates/mines.html
@@ -321,19 +321,19 @@
 
 <body>
 <header>
-    <nav>
-        <a href="/" class="logo">AH Gambling</a>
+<nav>
+    <a href="/" class="logo">AH Gambling</a>
 
-        <div class="balance-wrapper">
-            <button class="balance-btn">$1000</button>
-            <div class="balance-menu">
-                <a href="/deposit">Deposit</a>
-                <a href="/withdraw">Withdraw</a>
-                <div class="divider"></div>
-                <a href="/logout">Log out</a>
-            </div>
+    <div class="balance-wrapper">
+        <button class="balance-btn">$1,000</button>
+        <div class="balance-menu">
+            <a id="openDeposit">Deposit</a>
+            <a id="openWithdraw">Withdraw</a>
+            <div class="divider"></div>
+            <a href="/logout">Log out</a>
         </div>
-    </nav>
+    </div>
+</nav>
 </header>
 
 
@@ -573,6 +573,7 @@
 </main>
 </body>
 </html>
+
 
 
 
