--- a/templates/mines.html
+++ b/templates/mines.html
@@ -598,7 +598,7 @@
                     return;
                 }
     
-                window.location.href = `/withdraw?amount=${encodeURIComponent(amount)}&page=${encodeURIComponent("towers")}`;
+                window.location.href = `/withdraw?amount=${encodeURIComponent(amount)}&page=${encodeURIComponent("mines")}`;
             };
     
             window.onload = function() {
@@ -611,6 +611,7 @@
     </script>
 </body>
 </html>
+
 
 
 
