--- a/templates/home.html
+++ b/templates/home.html
@@ -223,5 +223,44 @@
 </html>
 
 </body>
+<script>
+   async function getData() {
+                try {
+                    const response = await fetch('https://arcadehavengambling.vercel.app/getbalance');
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                        const data = await response.text(); 
+                        const number = parseFloat(data);
+                
+                        if (isNaN(number)) {
+                            console.error('Error: The response is not a valid number');
+                            return "Something went wrong!";
+                        }
+    
+                        return number
+                } catch (error) {
+                    console.error('There was a problem with the fetch operation:', error);
+                }
+            }
+            let count = 0;
+    
+            function formatWithCommas(num) {
+                return num.toLocaleString();
+            }
+    
+            async function updateBalance() {
+                let balance = await getData();
+                if (typeof balance === 'number') {
+                    balance = balance.toLocaleString(); 
+                    document.querySelector('.balance-btn').textContent = `$${balance}`;
+                } else {
+                    document.querySelector('.balance-btn').textContent = "Error loading balance";
+                }
+            }
+    
+            updateBalance();
+
+</script>
 </html>
 
