--- a/templates/home.html
+++ b/templates/home.html
@@ -107,7 +107,6 @@
             text-align: center;
         }
 
-        /* Restored cards CSS from before */
         .cards {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -189,7 +188,7 @@
         <a href="/" class="logo">AH Gambling</a>
 
         <div class="balance-wrapper">
-            <button class="balance-btn">$1000</button>
+            <button class="balance-btn"></button>
             <div class="balance-menu">
                 <a href="/deposit">Deposit</a>
                 <a href="/withdraw">Withdraw</a>
