--- a/templates/towers.html
+++ b/templates/towers.html
@@ -350,7 +350,7 @@ button:hover {
     <a href="/" class="logo">AH Gambling</a>
 
     <div class="balance-wrapper">
-        <button class="balance-btn">$1,000</button>
+        <button class="balance-btn"></button>
         <div class="balance-menu">
             <a id="openDeposit">Deposit</a>
             <a id="openWithdraw">Withdraw</a>
@@ -567,6 +567,7 @@ button:hover {
     </script>
 </body>
 </html>
+
 
 
 
