--- a/templates/towers.html
+++ b/templates/towers.html
@@ -292,7 +292,9 @@ button:hover {
     color: transparent;  
     border-radius: 6px;
     cursor: pointer;
-    font-size: 0.95rem;
+    font-size: 1rem; 
+    font-family: Arial, sans-serif; 
+    font-weight: normal; 
 }
 
 .action-btn.deposit {
@@ -307,6 +309,8 @@ button:hover {
     transform: translate(-50%, -50%);  
     color: #000;  
     font-size: 1rem;
+    font-family: Arial, sans-serif; 
+    font-weight: normal;
 }
 
 .action-btn.withdraw {
@@ -321,6 +325,8 @@ button:hover {
     transform: translate(-50%, -50%);  
     color: #000;  
     font-size: 1rem;
+    font-family: Arial, sans-serif; 
+    font-weight: normal; 
 }
 
 .error-message {
@@ -567,6 +573,7 @@ button:hover {
     </script>
 </body>
 </html>
+
 
 
 
